tests/data/fortran/errors/parser/err_unknown_function_result.f90
function f(x) result(res)
  implicit none
  real :: x
end function f
